--- a/docker-compose.lightweight.yml
+++ b/docker-compose.lightweight.yml
@@ -6,12 +6,12 @@ services:
   mysql:
     image: mysql:8.0
     environment:
-      MYSQL_ROOT_PASSWORD: ${STANDALONE_MYSQL_ROOT_PASSWORD?:Missing STANDALONE_MYSQL_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${LIGHTWEIGHT_MYSQL_ROOT_PASSWORD?:Missing LIGHTWEIGHT_MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: zeppelin
       MYSQL_USER: zeppelin
-      MYSQL_PASSWORD: ${STANDALONE_MYSQL_PASSWORD?:Missing STANDALONE_MYSQL_PASSWORD}
+      MYSQL_PASSWORD: ${LIGHTWEIGHT_MYSQL_PASSWORD?:Missing LIGHTWEIGHT_MYSQL_PASSWORD}
     ports:
-      - 127.0.0.1:${STANDALONE_MYSQL_PORT:?Missing STANDALONE_MYSQL_PORT}:3306
+      - 127.0.0.1:${LIGHTWEIGHT_MYSQL_PORT:?Missing LIGHTWEIGHT_MYSQL_PORT}:3306
     # If you're upgrading from an older version, you can load your old database by switching the volumes below.
     # Then, take a database dump from the old database, switch the volumes back, and load the dump into the new database.
     volumes:
@@ -19,7 +19,7 @@ services:
       # - ./docker/production/data/mysql:/var/lib/mysql
     #command: --authentication-policy=mysql_native_password
     healthcheck:
-      test: "/usr/bin/mysql --host=127.0.0.1 --user=root --password=\"${STANDALONE_MYSQL_ROOT_PASSWORD}\" --execute \"SHOW DATABASES;\""
+      test: "/usr/bin/mysql --host=127.0.0.1 --user=root --password=\"${LIGHTWEIGHT_MYSQL_ROOT_PASSWORD}\" --execute \"SHOW DATABASES;\""
       interval: 1s
       timeout: 5s
       retries: 60
