update env with my better version

--- a/.env.example
+++ b/.env.example
@@ -74,11 +74,10 @@ STANDALONE_MYSQL_ROOT_PASSWORD=
 LIGHTWEIGHT_API_PORT=3001
 LIGHTWEIGHT_DASHBOARD_PORT=3002
 
-LIGHTWEIGHT_DB_HOST=
-LIGHTWEIGHT_DB_PORT=
-LIGHTWEIGHT_DB_USER=
+# Password for the MySQL root user
+LIGHTWEIGHT_MYSQL_ROOT_PASSWORD=
+
 LIGHTWEIGHT_DB_PASSWORD=
-LIGHTWEIGHT_DB_DATABASE=
 
 # If you want to add a prefix to API paths, such as /api, you can set that here
 LIGHTWEIGHT_API_PATH_PREFIX=
